--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
                                     <th class="py-2 px-3">Cuenta</th>
                                     <th class="py-2 px-3">Categoría</th>
                                     <th class="py-2 px-3">Parte</th>
+                                    <th class="py-2 px-3 text-right">IVA</th>
                                     <th class="py-2 px-3 text-right">Monto</th>
                                     <th class="py-2 px-3 text-center">Acciones</th>
                                 </tr>
