--- a/index.html
+++ b/index.html
@@ -627,6 +627,31 @@
                         </button>
                     </form>
                 </div>
+
+                <!-- Nueva tarjeta para gestión de activos de inversión -->
+                <div class="card p-6 rounded-xl">
+                    <h3 class="font-semibold text-lg mb-4">Gestión de Activos de Inversión</h3>
+                    <form id="add-investment-asset-form" class="space-y-4 mb-6">
+                        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+                            <div>
+                                <label for="new-investment-asset-name" class="block text-sm font-medium text-gray-400">Nombre del Activo</label>
+                                <input type="text" id="new-investment-asset-name" class="form-input mt-1" required placeholder="Ej: Bitcoin">
+                            </div>
+                            <div>
+                                <label for="new-investment-asset-category" class="block text-sm font-medium text-gray-400">Categoría</label>
+                                <input type="text" id="new-investment-asset-category" class="form-input mt-1" required placeholder="Ej: Criptomoneda">
+                            </div>
+                        </div>
+                        <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg">
+                            Agregar Activo
+                        </button>
+                    </form>
+                    <h4 class="font-semibold text-md mb-2">Activos Existentes</h4>
+                    <div id="investment-assets-list" class="space-y-2 max-h-48 overflow-y-auto">
+                        <!-- La lista se generará aquí -->
+                    </div>
+                </div>
+
                 <div class="card p-6 rounded-xl bg-red-900/20 border-red-500/30 lg:col-span-2">
                     <h3 class="font-semibold text-lg mb-4 text-red-300">Cierre Anual</h3>
                     <p class="text-sm text-red-200 mb-4">Esta acción archivará todos los movimientos y documentos dentro del rango de fechas seleccionado. Esta acción no se puede deshacer.</p>
@@ -916,36 +941,73 @@
 
         <div id="page-inversiones" class="page-content hidden">
             <h2 class="text-3xl font-bold mb-6 text-white">Gestión de Inversiones</h2>
-            <div class="grid grid-cols-1 gap-6">
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <div class="card p-6 rounded-xl text-center">
-                        <p class="text-gray-400">Total Invertido en Euros</p>
-                        <p id="total-invested-eur" class="text-4xl font-bold kpi-value mt-2">€0.00</p>
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
+                <!-- Columna Izquierda: Formulario y Totales -->
+                <div class="lg:col-span-1 space-y-6">
+                    <div class="card p-6 rounded-xl">
+                        <h3 class="font-semibold mb-4 text-lg">Registrar Inversión</h3>
+                        <form id="add-investment-form" class="space-y-4">
+                            <div>
+                                <label for="investment-date" class="block text-sm font-medium text-gray-400 mb-1">Fecha</label>
+                                <input type="date" id="investment-date" class="form-input" required>
+                            </div>
+                            <div>
+                                <label for="investment-account" class="block text-sm font-medium text-gray-400 mb-1">Cuenta Origen</label>
+                                <select id="investment-account" class="form-input" required></select>
+                            </div>
+                            <div>
+                                <label for="investment-asset" class="block text-sm font-medium text-gray-400 mb-1">Activo de Inversión</label>
+                                <select id="investment-asset" class="form-input" required></select>
+                            </div>
+                            <div>
+                                <label for="investment-amount" class="block text-sm font-medium text-gray-400 mb-1">Monto Invertido</label>
+                                <input type="number" id="investment-amount" class="form-input" placeholder="1000.00" step="0.01" required>
+                            </div>
+                             <div>
+                                <label for="investment-description" class="block text-sm font-medium text-gray-400 mb-1">Descripción (Opcional)</label>
+                                <input type="text" id="investment-description" class="form-input" placeholder="Compra inicial">
+                            </div>
+                            <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-4 rounded-lg">
+                                Guardar Inversión
+                            </button>
+                        </form>
                     </div>
-                    <div class="card p-6 rounded-xl text-center">
-                        <p class="text-gray-400">Total Invertido en Dólares</p>
-                        <p id="total-invested-usd" class="text-4xl font-bold kpi-value mt-2">$0.00</p>
+                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                        <div class="card p-4 rounded-xl text-center">
+                            <p class="text-gray-400">Total Invertido (EUR)</p>
+                            <p id="total-invested-eur" class="text-2xl font-bold kpi-value mt-2">€0.00</p>
+                        </div>
+                        <div class="card p-4 rounded-xl text-center">
+                            <p class="text-gray-400">Total Invertido (USD)</p>
+                            <p id="total-invested-usd" class="text-2xl font-bold kpi-value mt-2">$0.00</p>
+                        </div>
                     </div>
                 </div>
-                <div class="card p-6 rounded-xl">
-                    <h3 class="font-semibold mb-4">Movimientos de Inversión</h3>
-                    <div class="overflow-x-auto">
-                        <table class="w-full text-left min-w-[600px]">
-                            <thead>
-                                <tr class="text-gray-400 border-b border-gray-700">
-                                    <th class="py-2 px-3">Fecha</th>
-                                    <th class="py-2 px-3">Descripción</th>
-                                    <th class="py-2 px-3">Cuenta Origen</th>
-                                    <th class="py-2 px-3 text-right">Monto</th>
-                                </tr>
-                            </thead>
-                            <tbody id="investments-table-body">
+
+                <!-- Columna Derecha: Listado -->
+                <div class="lg:col-span-2">
+                    <div class="card p-6 rounded-xl">
+                        <h3 class="font-semibold mb-4">Movimientos de Inversión</h3>
+                        <div class="overflow-x-auto">
+                            <table class="w-full text-left min-w-[600px]">
+                                <thead>
+                                    <tr class="text-gray-400 border-b border-gray-700">
+                                        <th class="py-2 px-3">Fecha</th>
+                                        <th class="py-2 px-3">Activo</th>
+                                        <th class="py-2 px-3">Cuenta Origen</th>
+                                        <th class="py-2 px-3 text-right">Monto</th>
+                                        <th class="py-2 px-3 text-center">Acciones</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="investments-table-body">
                                 </tbody>
-                        </table>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+
 
         <!-- MODALS -->
         <div id="confirmation-modal" class="fixed inset-0 z-50 items-center justify-center hidden">
