--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La Maquina Logistica S.L</title>
+    <title>La Maquina Logistica SL</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
     
@@ -29,7 +29,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#60a5fa" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-package flex-shrink-0">
                     <path d="M16.5 9.4 7.55 4.24"/><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/><path d="m3.3 7 8.7 5 8.7-5"/><path d="M12 22V12"/>
                 </svg>
-                <span class="text-xl font-bold text-white whitespace-nowrap nav-text hidden">Finanazas E.E</span>
+                <span class="text-xl font-bold text-white whitespace-nowrap nav-text hidden">Finanazas EE</span>
             </div>
         </div>
         <nav class="flex flex-col gap-2 flex-grow">
