--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
                 <i data-lucide="contact"></i> <span class="nav-text hidden">Clientes</span>
             </a>
         </nav>
+
+        <!-- Connection Status Indicator -->
+        <div id="connection-status" class="mt-auto p-2 flex items-center justify-center gap-2 text-xs text-gray-400 opacity-0 transition-opacity duration-300">
+            <span id="status-icon"></span>
+            <span id="status-text" class="nav-text hidden"></span>
+        </div>
     </aside>
 
     <main id="main-content" class="flex-1 ml-20 p-8 main-content">
@@ -1170,3 +1176,5 @@
 </body>
 </html>
 
+
+}
