--- a/index.html
+++ b/index.html
@@ -938,6 +938,13 @@
                             </table>
                         </div>
                     </div>
+                    <!-- New Chart for Clients -->
+                    <div class="card p-6 rounded-xl mt-6">
+                        <h3 class="font-semibold mb-4">Total Facturado por Cliente (EUR)</h3>
+                        <div class="h-96">
+                            <canvas id="clientsChart"></canvas>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -1176,5 +1183,3 @@
 </body>
 </html>
 
-
-}
