--- a/index.html
+++ b/index.html
@@ -622,8 +622,8 @@
                             <input type="number" id="new-account-balance" class="form-input mt-1" required placeholder="1000.00" step="0.01">
                         </div>
                         <div>
-                            <label for="new-account-logo" class="block text-sm font-medium text-gray-400">Logo (Código SVG o URL Base64)</label>
-                            <textarea id="new-account-logo" rows="2" class="form-input mt-1" placeholder="<svg>...</svg> o data:image/..."></textarea>
+                            <label for="new-account-logo-select" class="block text-sm font-medium text-gray-400">Logo</label>
+                            <select id="new-account-logo-select" class="form-input mt-1"></select>
                         </div>
                         <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg transition-colors flex items-center justify-center gap-2">
                             <i data-lucide="plus-circle" class="w-4 h-4"></i> Agregar Cuenta
