--- a/index.html
+++ b/index.html
@@ -1235,13 +1235,8 @@
     </template>
     <!-- =========== END TEMPLATES =========== -->
     
-    <!-- Scripts de Firebase - Se cargan primero con 'defer' -->
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-    
-    <!-- Tu script principal - Se ejecuta DESPUÉS de los de Firebase gracias a 'defer' -->
-    <script src="js/main.js"></script>
+    <!-- Tu script principal ahora es un módulo y se ejecutará después del DOM -->
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
 
