--- a/index.html
+++ b/index.html
@@ -996,7 +996,24 @@
                             </table>
                         </div>
                     </div>
-                    <!-- New Chart for Clients -->
+                    <div class="card p-6 rounded-xl mt-6">
+                        <div class="flex justify-between items-center mb-4">
+                            <h3 class="font-semibold">Total Facturado por Cliente</h3>
+                            <div>
+                                <label for="clients-chart-currency" class="text-sm text-gray-400 mr-2">Moneda:</label>
+                                <select id="clients-chart-currency" class="form-input !p-2 !w-auto !text-sm bg-gray-900">
+                                    <option value="EUR">EUR (€)</option>
+                                    <option value="USD">USD ($)</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="h-96">
+                            <canvas id="clientsChart"></canvas>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
                     <div class="card p-6 rounded-xl mt-6">
                         <h3 class="font-semibold mb-4">Total Facturado por Cliente (EUR)</h3>
                         <div class="h-96">
