--- a/index.html
+++ b/index.html
@@ -601,6 +601,13 @@
             <h2 class="text-2xl md:text-3xl font-bold mb-6 text-white">Ajustes</h2>
             <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
                 
+                <div id="user-management-card" class="card p-6 rounded-xl lg:col-span-2 hidden">
+                    <h3 class="font-semibold text-lg mb-4 text-blue-300">Gestión de Usuarios</h3>
+                    <div id="users-list" class="space-y-2 max-h-72 overflow-y-auto">
+                        <!-- La lista de usuarios se generará aquí -->
+                    </div>
+                </div>
+
                 <div id="aeat-settings-card" class="card p-6 rounded-xl lg:col-span-2 hidden">
                     <h3 class="font-semibold text-lg mb-4">Configuración de Facturación Electrónica (AEAT)</h3>
                     <div class="bg-gray-800/50 p-4 rounded-lg">
@@ -1196,4 +1203,3 @@
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
-
