Rep. inicio secion 3

--- a/index.html
+++ b/index.html
@@ -1219,14 +1219,14 @@
         <div class="spinner" role="status"></div>
     </div>
     
-    <script type="module" src="js/main.js?v=1.1"></script>
+    <script type="module" src="js/main.js?v=1.2"></script>
 </body>
 </html>
 ```
 
-**Paso 2: Vuelve a Desplegar (Deploy)**
+**Paso 2: Haz el Despliegue Final**
 
-Ahora, con el `index.html` actualizado, ejecuta el siguiente comando en tu terminal de VS Code para asegurarte de que esta nueva versión llegue al servidor de Firebase:
+Ahora, con ambos archivos (`firebase.json` y `index.html`) actualizados en tu proyecto, ejecuta una última vez el comando de despliegue en tu terminal de VS Code:
 
 ```
 firebase deploy --only hosting
