Rep. inicio secion 4

--- a/index.html
+++ b/index.html
@@ -1224,7 +1224,7 @@
 </html>
 ```
 
-**Paso 2: Haz el Despliegue Final**
+**Paso 2: Vuelve a Desplegar (Deploy)**
 
 Ahora, con ambos archivos (`firebase.json` y `index.html`) actualizados en tu proyecto, ejecuta una última vez el comando de despliegue en tu terminal de VS Code:
 
