--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
         <!-- Logo / Desktop Toggle -->
         <div id="sidebar-toggle-desktop" class="hidden md:flex items-center justify-center gap-3 mb-10 cursor-pointer">
             <div class="flex items-center gap-3 overflow-hidden">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#60a5fa" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-package flex-shrink-0">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24" fill="none" stroke="#60a5fa" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-package flex-shrink-0">
                     <path d="M16.5 9.4 7.55 4.24"/><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/><path d="m3.3 7 8.7 5 8.7-5"/><path d="M12 22V12"/>
                 </svg>
-                <span class="text-xl font-bold text-white whitespace-nowrap nav-text">Finanazas EE</span>
+                <span class="text-xl font-bold text-white whitespace-nowrap nav-text">Finanzas EE</span>
             </div>
         </div>
         
@@ -103,7 +103,7 @@
              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24" fill="none" stroke="#60a5fa" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-package flex-shrink-0">
                 <path d="M16.5 9.4 7.55 4.24"/><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/><path d="m3.3 7 8.7 5 8.7-5"/><path d="M12 22V12"/>
             </svg>
-             <span class="text-xl font-bold text-white whitespace-nowrap">Finanazas EE</span>
+             <span class="text-xl font-bold text-white whitespace-nowrap">Finanzas EE</span>
         </div>
 
         <nav class="flex flex-col gap-2 flex-grow">
@@ -833,7 +833,7 @@
                                 <div class="grid grid-cols-12 gap-4">
                                     <div class="col-span-4">
                                         <label for="factura-numero" class="block text-sm text-gray-400 mb-1">Nº Factura</label>
-                                        <input type="text" id="factura-numero" class="form-input" value="2024-0001" required>
+                                        <input type="text" id="factura-numero" class="form-input bg-gray-700/50 cursor-not-allowed" readonly required>
                                     </div>
                                     <div class="col-span-4">
                                         <label for="factura-fecha" class="block text-sm text-gray-400 mb-1">Fecha</label>
