Rep. inicio de sesion 2

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="https://unpkg.com/lucide@latest"></script>
+    <!-- --- INICIO DE LA CORRECCIÓN --- -->
+    <!-- Se fija la versión de Lucide a una estable (0.320.0) en lugar de @latest -->
+    <script src="https://unpkg.com/lucide@0.320.0"></script>
+    <!-- --- FIN DE LA CORRECCIÓN --- -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
