Rep. inicio de sesion 7

--- a/index.html
+++ b/index.html
@@ -1220,7 +1220,7 @@
                     <!-- Los toggles de permisos se generarán aquí -->
                 </div>
                 <div class="flex justify-end gap-4 p-4 mt-auto border-t border-gray-700">
-                    <button id="permissions-modal-save-btn" class="px-6 py-2 rounded-lg bg-blue-600 hover:bg-blue-700 text-white font-semibold">Guardar Cambios</button>
+                    <button id="permissions-modal-save-btn" class="px-6 py-2 rounded-lg bg-blue-600 hover:bg-blue-700 text-white font-semibold">Guargar Cambios</button>
                 </div>
             </div>
         </div>
@@ -1232,7 +1232,13 @@
         <div class="spinner" role="status"></div>
     </div>
     
+    <!-- INICIO DE LA CORRECCIÓN DE ICONOS -->
+    <!-- Esta línea ejecuta la librería de iconos para dibujar los iconos del login al cargar la página -->
+    <script>
+        lucide.createIcons();
+    </script>
+    <!-- FIN DE LA CORRECCIÓN DE ICONOS -->
+
     <script type="module" src="js/main.js?v=1.2"></script>
 </body>
 </html>
-
