--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <!-- Se fija la versión de Lucide a una estable (0.320.0) -->
-    <script src="https://unpkg.com/lucide@0.320.0"></script>
+    <!-- *** CORRECCIÓN: Se actualizó la versión de Lucide a una más reciente y estable *** -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lucide/0.395.0/lucide.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
@@ -1237,3 +1237,4 @@
 
 </body>
 </html>
+
