--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- *** CORRECCIÓN: Se actualizó la versión de Lucide a una más reciente y estable *** -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lucide/0.395.0/lucide.min.js"></script>
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
@@ -414,7 +414,7 @@
                         <h4 class="font-semibold text-center mb-2">Distribución de Saldos en Euros (€)</h4>
                         <div class="flex flex-col-reverse md:flex-row gap-6 items-center">
                             <div id="balance-legend-eur" class="w-full md:w-1/2 lg:w-2/3"></div>
-                            <div class="w-full md:w-1/2 lg:w-1/3 h-40">
+                            <div class="w-full md:w-1_2 lg:w-1_3 h-40">
                                 <canvas id="accountsBalanceChartEUR"></canvas>
                             </div>
                         </div>
@@ -423,7 +423,7 @@
                         <h4 class="font-semibold text-center mb-2">Distribución de Saldos en Dólares ($)</h4>
                         <div class="flex flex-col-reverse md:flex-row gap-6 items-center">
                             <div id="balance-legend-usd" class="w-full md:w-1/2 lg:w-2/3"></div>
-                            <div class="w-full md:w-1/2 lg:w-1/3 h-40">
+                            <div class="w-full md:w-1_2 lg:w-1_3 h-40">
                                 <canvas id="accountsBalanceChartUSD"></canvas>
                             </div>
                         </div>
