Nueva rep. inicio 8

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- *** CORRECCIÓN: Se actualizó la versión de Lucide a una más reciente y estable *** -->
-    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
+    <!-- *** NUEVO: Se añade data-stop-auto-replace="true" para evitar que se auto-ejecute *** -->
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js" data-stop-auto-replace="true"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.23/jspdf.plugin.autotable.min.js"></script>
@@ -1138,7 +1139,7 @@
         <!-- MODALS -->
         <div id="confirmation-modal" class="fixed inset-0 z-50 items-center justify-center hidden">
             <div id="confirmation-modal-backdrop" class="absolute inset-0 bg-black/70 backdrop-blur-sm"></div>
-            <div class="card rounded-xl p-8 z-10 w-full max-w-md">
+            <div classs="card rounded-xl p-8 z-10 w-full max-w-md">
                 <h3 id="modal-title" class="text-xl font-bold text-white mb-4">Confirmar Acción</h3>
                 <p id="modal-message" class="text-gray-300 mb-6">¿Estás seguro de que quieres continuar?</p>
                 <div class="flex justify-end gap-4">
