--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <!-- *** CORRECCIÓN: Se actualizó la versión de Lucide a una más reciente y estable *** -->
-    <!-- *** NUEVO: Se añade data-stop-auto-replace="true" para evitar que se auto-ejecute *** -->
+    <!-- Se mantiene la versión de unpkg y el data-stop-auto-replace -->
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js" data-stop-auto-replace="true"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
@@ -93,20 +92,16 @@
         <!-- Logo / Desktop Toggle -->
         <div id="sidebar-toggle-desktop" class="hidden md:flex items-center justify-center gap-3 mb-10 cursor-pointer">
             <div class="flex items-center gap-3 overflow-hidden">
-                <!-- CORRECCIÓN: Se eliminaron las clases 'lucide' y 'lucide-package' de este SVG -->
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24" fill="none" stroke="#60a5fa" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="flex-shrink-0">
-                    <path d="M16.5 9.4 7.55 4.24"/><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/><path d="m3.3 7 8.7 5 8.7-5"/><path d="M12 22V12"/>
-                </svg>
+                <!-- *** CORRECCIÓN INTELIGENTE: Reemplazado SVG problemático por icono Lucide *** -->
+                <i data-lucide="package" class="flex-shrink-0 text-blue-500 w-6 h-6"></i>
                 <span class="text-xl font-bold text-white whitespace-nowrap nav-text">Finanzas EE</span>
             </div>
         </div>
         
         <!-- Mobile Header (Logo only) -->
         <div class="flex md:hidden items-center justify-center gap-3 mb-10">
-             <!-- CORRECCIÓN: Se eliminaron las clases 'lucide' y 'lucide-package' de este SVG -->
-             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24" fill="none" stroke="#60a5fa" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="flex-shrink-0">
-                <path d="M16.5 9.4 7.55 4.24"/><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/><path d="m3.3 7 8.7 5 8.7-5"/><path d="M12 22V12"/>
-            </svg>
+             <!-- *** CORRECCIÓN INTELIGENTE: Reemplazado SVG problemático por icono Lucide *** -->
+             <i data-lucide="package" class="flex-shrink-0 text-blue-500 w-6 h-6"></i>
              <span class="text-xl font-bold text-white whitespace-nowrap">Finanzas EE</span>
         </div>
 
