--- a/index.html
+++ b/index.html
@@ -1228,7 +1228,7 @@
         <div class="spinner" role="status"></div>
     </div>
     
-    <script type="module" src="js/main.js?v=1.2"></script>
+    <script type="module" src="/js/main.js"></script> <!-- MODIFICADO: Ruta absoluta y sin versión -->
     <!-- Ya no se necesita el bloque script aquí -->
 
 </body>
