--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,7 @@
                                 <label for="client-email" class="block text-sm font-medium text-gray-400 mb-1">Email</label>
                                 <input type="email" id="client-email" class="form-input">
                             </div>
-                            <div>
+                             <div>
                                 <label for="client-industry" class="block text-sm font-medium text-gray-400 mb-1">Rubro</label>
                                 <input type="text" id="client-industry" class="form-input">
                             </div>
@@ -1134,7 +1134,7 @@
         <!-- MODALS -->
         <div id="confirmation-modal" class="fixed inset-0 z-50 items-center justify-center hidden">
             <div id="confirmation-modal-backdrop" class="absolute inset-0 bg-black/70 backdrop-blur-sm"></div>
-            <div classs="card rounded-xl p-8 z-10 w-full max-w-md">
+            <div class="card rounded-xl p-8 z-10 w-full max-w-md">
                 <h3 id="modal-title" class="text-xl font-bold text-white mb-4">Confirmar Acción</h3>
                 <p id="modal-message" class="text-gray-300 mb-6">¿Estás seguro de que quieres continuar?</p>
                 <div class="flex justify-end gap-4">
@@ -1228,9 +1228,14 @@
         <div class="spinner" role="status"></div>
     </div>
     
-    <script type="module" src="/js/main.js"></script> <!-- MODIFICADO: Ruta absoluta y sin versión -->
+    <!--
+      SOLUCIÓN:
+      Se ha cambiado la ruta del script de absoluta (src="/js/main.js") a relativa (src="js/main.js").
+      Esto soluciona el error de tipo MIME, ya que el servidor ahora encontrará
+      el archivo correctamente en lugar de servir index.html.
+    -->
+    <script type="module" src="js/main.js"></script>
     <!-- Ya no se necesita el bloque script aquí -->
 
 </body>
 </html>
-
