Rep eliminar Proformas 1/2

--- a/index.html
+++ b/index.html
@@ -1134,7 +1134,7 @@
             <!-- MODALS -->
             <div id="confirmation-modal" class="fixed inset-0 z-50 items-center justify-center hidden">
                 <div id="confirmation-modal-backdrop" class="absolute inset-0 bg-black/70 backdrop-blur-sm"></div>
-                <div classs="card rounded-xl p-8 z-10 w-full max-w-md">
+                <div class="card rounded-xl p-8 z-10 w-full max-w-md">
                     <h3 id="modal-title" class="text-xl font-bold text-white mb-4">Confirmar Acción</h3>
                     <p id="modal-message" class="text-gray-300 mb-6">¿Estás seguro de que quieres continuar?</p>
                     <div class="flex justify-end gap-4">
