--- a/index.html
+++ b/index.html
@@ -170,8 +170,12 @@
     
             <div id="page-inicio" class="page-content">
                 <div class="hidden md:flex justify-between items-center mb-6">
-                    <!-- --- MODIFICADO: Añadido ID --- -->
-                    <h2 id="dashboard-title" class="text-3xl font-bold text-white uppercase tracking-wider">Centro de Mando</h2>
+                    <!-- --- MODIFICADO: Estructura de Título/Subtítulo --- -->
+                    <div>
+                        <h2 id="dashboard-title" class="text-3xl font-bold text-white">Centro de Mando</h2>
+                        <p id="dashboard-subtitle" class="text-lg text-gray-400 -mt-1"></p>
+                    </div>
+                    <!-- --- FIN DE MODIFICACIÓN --- -->
                     <div class="flex items-center gap-2">
                         <button id="quick-add-income" class="bg-green-600 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-lg transition-colors flex items-center gap-2 text-sm">
                             <i data-lucide="plus-circle" class="w-4 h-4"></i> Ingreso
@@ -1240,3 +1244,4 @@
     
     </body>
     </html>
+
