Cambio de nombre al icono

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <div class="flex md:hidden items-center justify-center gap-3 mb-10">
                  <!-- *** CORRECCIÓN INTELIGENTE: Reemplazado SVG problemático por icono Lucide *** -->
                  <i data-lucide="package" class="flex-shrink-0 text-blue-500 w-6 h-6"></i>
-                 <span class="text-xl font-bold text-white whitespace-nowrap">Finanzas EE</span>
+                 <span class="text-xl font-bold text-white whitespace-nowrap">Finanzas</span>
             </div>
     
             <nav class="flex flex-col gap-2 flex-grow">
